セクション4 33まで完了

--- a/asets/css/style.css
+++ b/asets/css/style.css
@@ -69,7 +69,8 @@ section .comment {
 
 .errorMessage {
   color: red;
-  margin-left: 70px;
+  /* color: blue; */
+  margin-left: 170px;
 }
 
 /* 新規スレッド */
